Fix alignment of icons on matrix

--- a/static/sass/_pattern_matrix.scss
+++ b/static/sass/_pattern_matrix.scss
@@ -67,4 +67,8 @@
       margin-top: 0;
     }
   }
+
+  .p-matrix__content {
+    padding-left: 4rem;
+  }
 }
